# PromptEngineerBot

./: .bandit  .dockerignore  .env.example  .env_example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .safety-policy.yml  .semgrep.yml  AGENTS.MD  ASYNC_SYNC_FIX_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  POST_OPTIMIZATION_EMAIL_FIX_SUMMARY.md  README.md  alembic.ini  conversation_manager.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  gsheets_logging.py  init-db.sql  main.py  messages.py  mock_redis.py  openai_client.py  openrouter_client.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_bot.py  state_manager.py  test_health_simple.py  test_logging_simple.py  test_simple_auth.py
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
docs/: BOT_USER_GUIDE.md  FINAL_INTEGRATION_VALIDATION_REPORT.md  FINAL_VALIDATION_REPORT.md  INDEX.md  MIGRATION_GUIDE.md
prompts/: CRAFT_prompt.txt  GGL_prompt.txt  LYRA_prompt.txt
scripts/: __init__.py  analyze_project_security.py  backup-db.sh  benchmark_precommit.py  deploy.sh  healthcheck.py  mock_redis.py  server-setup.sh  setup_security_tools.py  test_imports.py  validate_security_config.py  validate_system.py  verify_precommit_cache.py
src/: __init__.py  audit_service.py  auth_service.py  background_tasks.py  bot_handler.py  config.py  conversation_manager.py  database.py  dependencies.py  email_flow.py  email_service.py  email_templates.py  graceful_degradation.py  gsheets_logging.py  health_checks.py  llm_client_base.py  llm_factory.py  logging_utils.py  main.py  messages.py  openai_client.py  openrouter_client.py  prompt_loader.py  redis_client.py  state_manager.py  user_profile_utils.py
telegram_bot/: __init__.py  dependencies.py  main.py  reports.py
telegram_prompt_bot/: main.py
tests/: README.md  conftest.py  test_audit_service.py  test_auth_service.py  test_auth_service_profile_integration.py  test_background_tasks.py  test_bot.py  test_bot_handler.py  test_bot_handler_health_integration.py  test_bot_handler_integration.py  test_config.py  test_conversation_manager.py  test_database.py  test_email_flow_integration.py  test_email_flow_timeout.py  test_email_service.py  test_email_service_single_result.py  test_followup_integration.py  test_forcereply_comprehensive.py  test_graceful_degradation.py  test_health_checks.py  test_llm_client_base.py  test_llm_clients.py  test_llm_factory.py  test_logging_utils.py  test_messages.py  test_metrics.py  test_migration_integration.py  test_performance.py  test_post_optimization_email.py  test_post_optimization_integration.py  test_profile_flow_integration.py  test_prompt_loader.py  test_redis_client.py  test_security.py  test_state_manager.py  test_summary_post_optimization.md  test_task8_simple.py  test_token_accumulation_fix.py  test_user_profile_utils.py  (+1 more)
tools/: README.md  (+2 more)
(+225 files in other folders)
